# Image-studio-app

./: .gitignore  .prettierignore  LICENSE  README.md  components.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
data/: db.sqlite
src/: main.tsx  routeTree.gen.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crud/: compression.rs  images.rs  mod.rs  notifications.rs  selections.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src/components/: app-sidebar.tsx  component-example.tsx  image-compare.tsx  image-grid.tsx  image-tools.tsx  log-panel.tsx  notification-center.tsx  theme-provider.tsx  theme-toggle.tsx  update-checker.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  direction.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  popover.tsx  select.tsx  sheet.tsx  sidebar.tsx  textarea.tsx  tooltip.tsx
src/lib/: logger.ts  notifications.ts  tauri.ts  utils.ts
src/routes/: __root.tsx  _app.tsx
src/routes/_app/: index.tsx  output.tsx  settings.tsx
src/schema/: tinybase-schema.ts
