[package]
name = "Image-Studio"
version = "0.1.0"
description = "an open source desktop application for for image optimization with ai tools focus on privacy for local devices"
authors = ["Mouktar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_v2_templates_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"
image = "0.25"
imagesize = "0.13"
dunce = "1.0"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
jpeg-encoder = "0.7.0"
imagequant = "4.4.1"
png = "0.18.1"
rgb = "0.8.53"
futures = "0.3.32"
num_cpus = "1.17.0"

